--- a/style.css
+++ b/style.css
@@ -2,4 +2,13 @@ h1 {
     font-size: 48px;
     color: #333;
     text-transform: uppercase;
+    margin-bottom: 300px;
 }
+section {
+    background-color: green;
+    position: relative;
+    width: 150px;
+    height: 150px;
+    text-align: center;
+    cursor: pointer;
+  }
